# velora

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  asset_8cpp.html  asset_8cpp.js  asset_8hpp.html  asset_8hpp.js  asset_8hpp_source.html  camera__system_8cpp.html  camera__system_8hpp.html  camera__system_8hpp.js  camera__system_8hpp_source.html  classes.html  classvelora_1_1ComponentLoaderRegistry-members.html  classvelora_1_1ComponentLoaderRegistry.html  classvelora_1_1ComponentLoaderRegistry.js  classvelora_1_1ComponentManager-members.html  classvelora_1_1ComponentManager.html  classvelora_1_1ComponentManager.js  classvelora_1_1ComponentSerializerRegistry-members.html  classvelora_1_1ComponentSerializerRegistry.html  classvelora_1_1ComponentSerializerRegistry.js  classvelora_1_1ComponentStorage-members.html  classvelora_1_1ComponentStorage.html  classvelora_1_1ComponentStorage.js  classvelora_1_1ComponentTypeManager-members.html  classvelora_1_1ComponentTypeManager.html  classvelora_1_1EntityManager-members.html  classvelora_1_1EntityManager.html  classvelora_1_1EntityManager.js  classvelora_1_1FpsCounter-members.html  classvelora_1_1FpsCounter.html  classvelora_1_1FpsCounter.js  classvelora_1_1FrameBufferObject-members.html  classvelora_1_1FrameBufferObject.html  classvelora_1_1FrameBufferObject.js  classvelora_1_1FrameBufferObjectDispatcher-members.html  (+679 more)
cmake/: add_module.cmake  compile_options.cmake  dependencies.cmake  protobuf_generate.cmake
docs/: CodeStyleGuidelines.md
include/: velora.hpp
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  (+98 more)
src/entry/: CMakeLists.txt
src/entry/include/: entry.hpp  fixed_step_loop.hpp
src/entry/src/: entry.cpp  fixed_step_loop.cpp
src/game/: CMakeLists.txt
src/game/camera_system/: CMakeLists.txt
src/game/camera_system/include/: camera_system.hpp
src/game/camera_system/src/: camera_system.cpp
src/game/health/: CMakeLists.txt
src/game/health/include/: health_component.hpp  health_system.hpp
src/game/health/src/: health_system.cpp
src/game/health_component/: CMakeLists.txt
src/game/health_component/include/: health_component.hpp  health_system.hpp
src/game/health_component/src/: health_system.cpp
src/game/health_system/: CMakeLists.txt
src/game/health_system/include/: health_component.hpp  health_system.hpp
src/game/health_system/src/: health_system.cpp
src/game/include/: game.hpp
src/game/input_system/: CMakeLists.txt
src/game/input_system/include/: input_component.hpp  input_system.hpp
src/game/input_system/src/: input_system.cpp
src/game/light_system/: CMakeLists.txt
src/game/light_system/include/: light_system.hpp
src/game/light_system/src/: light_system.cpp
src/game/movement/: CMakeLists.txt
src/game/movement/include/: movement_system.hpp  position_component.hpp
src/game/movement/src/: movement_system.cpp
src/game/position_component/: CMakeLists.txt
src/game/position_component/include/: position_component.hpp  position_system.hpp
src/game/position_component/src/: position_system.cpp
src/game/proto/: camera_component.proto  entity_definition.proto  health_component.proto  input_component.proto  level_definition.proto  light_component.proto  math.proto  network_component.proto  script_component.proto  terrain_component.proto  transform_component.proto  visual_component.proto
src/game/script_system/: CMakeLists.txt
src/game/script_system/include/: lua_components.hpp  script_system.hpp
src/game/script_system/src/: script_system.cpp
src/game/src/: game.cpp
src/game/terrain_system/: CMakeLists.txt
src/game/terrain_system/include/: terrain_system.hpp
src/game/terrain_system/src/: terrain_system.cpp
src/game/transform_system/: CMakeLists.txt
src/game/transform_system/include/: transform_component.hpp  transform_system.hpp
src/game/transform_system/src/: transform_system.cpp
src/game/visual_component/: CMakeLists.txt
src/game/visual_component/include/: visual_system.hpp
src/game/visual_system/: CMakeLists.txt
src/game/visual_system/include/: visual_component.hpp  visual_system.hpp
src/game/visual_system/src/: visual_system.cpp
src/game/world/: CMakeLists.txt
src/game/world/include/: world.hpp
src/game/world/level/: CMakeLists.txt
src/game/world/level/include/: level.hpp
src/game/world/level/src/: level.cpp
src/game/world/src/: world.cpp
src/process/: CMakeLists.txt
src/process/include/: process.hpp  process_window_callbacks.hpp
src/process/process_winapi/: CMakeLists.txt
src/process/process_winapi/include/: process_winapi.hpp
src/process/process_winapi/src/: process_winapi.cpp
src/process/src/: process.cpp
src/render/: CMakeLists.txt
src/render/include/: fps_counter.hpp  frame_buffer_object.hpp  postprocess_pipeline.hpp  render.hpp  render_buffer.hpp  render_mode.hpp  render_options.hpp  shader.hpp  shader_storage_buffer.hpp  texture.hpp  vertex.hpp  vertex_buffer.hpp
src/render/opengl/: CMakeLists.txt
src/render/opengl/include/: glsl_variable.hpp  opengl.hpp  opengl_debug.hpp  opengl_frame_buffer_object.hpp  opengl_render_buffer_object.hpp  opengl_shader.hpp  opengl_shader_storage_buffer.hpp  opengl_texture.hpp  opengl_vertex_buffer.hpp
src/render/opengl/opengl_core/: CMakeLists.txt
src/render/opengl/opengl_core/include/: opengl_core.hpp  opengl_debug.hpp
src/render/opengl/opengl_core/src/: opengl_core.cpp  opengl_debug.cpp
src/render/opengl/src/: opengl.cpp  opengl_frame_buffer_object.cpp  opengl_shader.cpp  opengl_shader_storage_buffer.cpp  opengl_texture.cpp  opengl_vertex_buffer.cpp
src/render/src/: render.cpp  vertex.cpp
src/window/: CMakeLists.txt
src/window/include/: window.hpp
src/window/src/: window.cpp
src/window/window_winapi/: CMakeLists.txt
src/window/window_winapi/include/: window_winapi.hpp
src/window/window_winapi/src/: window_winapi.cpp
tests/: CMakeLists.txt
tests/include/: unit_tests.hpp
tests/src/: unit_tests.cpp
(+45 files in other folders)
